# rustle

./: Cargo.toml  README.md
.github/workflows/: build_and_test.yml  ci.yml
src/: bin_tests.rs  display.rs  lib.rs  lib_tests.rs  main.rs  words.rs
src/assets/: wordlist.json
