[package]
name = "rustle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
crossterm = "0.26.1"
lazy_static = "1.4.0"
regex = "1.8.4"
chrono = "0.4.26"
serde_json = "1.0.97"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"